# boids

./: .gitignore  .travis.yml  LICENSE  README.md  boids.cabal  default.nix  stack.yaml
exe/: Main.hs
src/: Boids.hs  Main.hs  Navigation.hs  Style.hs  TestData.hs  Utils.hs  Vector.hs  ViewPortTransform.hs
src/Navigation/: Internals.hs
test/: BoidsSpec.hs  NavigationSpec.hs  Spec.hs  TestDataSpec.hs  ViewPortTransformSpec.hs
