name:                boids
version:             0.1.0.0
synopsis:            Boids in Haskell 
description:         Please see README.md
homepage:            https://github.com/tsoding/boids#readme
license:             MIT
license-file:        LICENSE
author:              Alexey Kutepov
maintainer:          reximkut@gmail.com
copyright:           2016 Alexey Kutepov
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , gloss
                     , random
  exposed-modules:     Boids
  default-language:    Haskell2010

executable boids-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , boids
                     , gloss
                     , random
  default-language:    Haskell2010

test-suite boids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , HUnit-approx
                     , boids
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsoding/boids
